--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
             <a href="#">Home</a>
         </li>
         <li>
-            <a href="#">Service</a>
+            <a href="#" >Service</a>
         </li>
         <li>
-            <a href="#">Feature</a>
+            <a href="#" >Feature</a>
         </li>
         <li>
-             <a href="#">Product</a>
+             <a href="#" >Product</a>
         </li>
         <li>
-             <a href="#">Testimonial</a>
+             <a href="#" >Testimonial</a>
         </li>
         <li>
-             <a href="#">FAQ</a>
+             <a href="#" >FAQ</a>
         </li>
     </ul>
    <div class="ini-button">
@@ -46,7 +46,9 @@
         </h1>
         <p>Where to grow your bussines as a photographer: site or social
             media?</p>
+
             <button class="btn-register">Register</button>
+  
        </div>
        <div class="tron-image">
         <img src="icon/Illustration.png" alt="Illustration">
@@ -81,19 +83,19 @@
  </div>
  <div class="card-container">
  <div class="card">
-    <img src="icon/Icon (1).png" alt="Icon" class="icon">
+    <img src="icon/Icon-1.png" alt="Icon" class="icon">
     <h3>Membership <br> Organisation</h3>
     <p>Our membership management <br> software provides full automations of <br> membership
     renewals and payments</p>
  </div>
 <div class="card">
-    <img src="icon/Icon (2).png" alt="Icon" class="icon">
+    <img src="icon/Icon-2.png" alt="Icon" class="icon">
     <h3>National <br>Association</h3>
    <p>Our membership management <br> software provides full automations of <br> membership
     renewals and payments</p>
 </div>
 <div class="card">
-    <img src="icon/Icon (3).png" alt="Icon" class="icon">
+    <img src="icon/Icon-3.png" alt="Icon" class="icon">
     <h3>Clubs And <br>Group</h3>
     <p>Our membership management <br> software provides full automations of <br> membership
     renewals and payments</p>
@@ -101,7 +103,7 @@
 </section>
 <section class="tron-kedua">
 <div class="tron-2">
-    <img src="icon/Frame 35.png">
+    <img src="icon/orang-lgberdua.png">
 </div>
 <div class="tron-content2">
     <h1>The unseen of spending three <br> at Pixelgrade</h1>
@@ -124,7 +126,7 @@
     </div>
         <div class="stats">
       <div class="stat-item">
-       <img src="icon/Icon (4).png">
+       <img src="icon/Icon-4.png">
         <div class="stat-text">
           <span class="stat-number">2,245,341</span>
           <span class="stat-label">Members</span>
@@ -132,7 +134,7 @@
       </div>
 
       <div class="stat-item">
-        <img src="icon/Icon (5).png">
+        <img src="icon/Icon-5.png">
         <div class="stat-text">
           <span class="stat-number">46,328</span>
           <span class="stat-label">Clubs</span>
@@ -140,7 +142,7 @@
       </div>
 
       <div class="stat-item">
-        <img src="icon/Icon (6).png">
+        <img src="icon/Icon-6.png">
         <div class="stat-text">
           <span class="stat-number">828,867</span>
           <span class="stat-label">Event Bookings</span>
@@ -148,7 +150,7 @@
       </div>
 
       <div class="stat-item">
-       <img src="icon/Icon (7).png">
+       <img src="icon/Icon-7.png">
         <div class="stat-text">
           <span class="stat-number">1,926,436</span>
           <span class="stat-label">Payments</span>
@@ -158,7 +160,7 @@
   </section>
   <section class="tron-ketiga">
       <div class="tron-3">
-        <img src="icon/pana.png">
+        <img src="icon/orang-mencethp.png">
       </div>
       <div class="tron-content3">
         <h1>How to design your site footer like <br> we did</h1>
@@ -173,7 +175,7 @@
   </section>
   <section class="tron-keempat">
   <div class="tron-4">
-    <img src="icon/image 9.png">
+    <img src="icon/image-9.png">
   </div>
   <div class="tron-content4">
   <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus<br>
@@ -183,7 +185,7 @@
    eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien,<br>
    vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum<br>
    id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
-  <div class="isiteks">
+   <div class="isiteks">
    <span class="text1">The Smith</span>
    <span class="text2">British Dragon Boat Racing Association</span>
    <div class="customers">
@@ -208,7 +210,7 @@
 </div> 
 <section class="cards">
   <div class="card2">
-    <img src="image/image 18.png">
+    <img src="image/image-18.png">
     <div class="card-box2">
       <h3>Creating Streamlined Safeguarding Processes with OneRen</h3>
       <a href="#" class="readmore">Readmore →</a>
@@ -216,7 +218,7 @@
   </div>
 
   <div class="card2">
-    <img src="image/image 19.png">
+    <img src="image/image-19.png">
     <div class="card-box2">
       <h3>What are your safeguarding responsibilities and how can you manage them?</h3>
       <a href="#" class="readmore">Readmore →</a>
@@ -224,7 +226,7 @@
   </div>
 
   <div class="card2">
-    <img src="image/image 20.png">
+    <img src="image/image-20.png">
     <div class="card-box2">
       <h3>Revamping the Membership Model with Triathlon<br> Australia</h3>
       <a href="#" class="readmore">Readmore →</a>
