--- a/index.html
+++ b/index.html
@@ -1,132 +1,135 @@
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nexcent</title>
-    <link rel="stylesheet" href="style/style1.css">
-    <link href="https://fonts.googleapis.com/css2?family=inter:wght@400;500;600;700&display=swap" rel="stylesheet">
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Nexcent</title>
+  <link rel="stylesheet" href="style/style1.css">
+  <link href="https://fonts.googleapis.com/css2?family=inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
-    <!-- navbar -->
-    <nav>
+  <!-- navbar -->
+  <nav>
     <div class="ini-logo">
-    <img src="logo/Logo.png">
+      <img src="logo/Logo-diatas.png">
     </div>
     <ul>
-        <li>
-            <a href="#">Home</a>
-        </li>
-        <li>
-            <a href="#" >Service</a>
-        </li>
-        <li>
-            <a href="#" >Feature</a>
-        </li>
-        <li>
-             <a href="#" >Product</a>
-        </li>
-        <li>
-             <a href="#" >Testimonial</a>
-        </li>
-        <li>
-             <a href="#" >FAQ</a>
-        </li>
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">Service</a>
+      </li>
+      <li>
+        <a href="#">Feature</a>
+      </li>
+      <li>
+        <a href="#">Product</a>
+      </li>
+      <li>
+        <a href="#">Testimonial</a>
+      </li>
+      <li>
+        <a href="#">FAQ</a>
+      </li>
     </ul>
-   <div class="ini-button">
+    <div class="ini-button">
       <a href="#" class="login">Login</a>
       <a href="#" class="signup">Sign up</a>
     </div>
-    </nav>
-    <!-- tron -->
-     <section class="tron">
+  </nav>
+  <!-- tron -->
+  <section class="tron">
     <div class="tron-content">
-        <h1>Lesson and insight<br>
+      <h1>Lesson and insight<br>
         <span>from 8 years</span>
-        </h1>
-        <p>Where to grow your bussines as a photographer: site or social
-            media?</p>
+      </h1>
+      <p>Where to grow your bussines as a photographer: site or social
+        media?</p>
 
-            <button class="btn-register">Register</button>
-  
-       </div>
-       <div class="tron-image">
-        <img src="icon/Illustration.png" alt="Illustration">
-       </div>
-     </section>
-     <div class="dots-container">
-        <span class="dot active"></span>
-        <span class="dot"></span>
-        <span class="dot"></span>
-     </div>
-   <!--base -->
-   <section class="client">
-   <div class="home-base">
-    <h1>Our Client</h1>
-    <p>We have been working with some Fortune 500+ client</p>
-   </div>
-<!-- logo -->
-   <div class="line-logo">
-    <img src="logo/Logo (1).png" >
-    <img src="logo/Logo (2).png" >
-    <img src="logo/Logo (3).png" >
-    <img src="logo/Logo (4).png" >
-    <img src="logo/Logo (5).png" >
-    <img src="logo/Logo (6).png" >
-    <img src="logo/Logo (7).png" >
-   </div>
-<!-- card -->
- <div class="community">
-    <h1>Manage your entire community <br>
-        <span>in a single system</span></h1>
-    <p>Who is Nexcent suitable for?</p>
- </div>
- <div class="card-container">
- <div class="card">
-    <img src="icon/Icon-1.png" alt="Icon" class="icon">
-    <h3>Membership <br> Organisation</h3>
-    <p>Our membership management <br> software provides full automations of <br> membership
-    renewals and payments</p>
- </div>
-<div class="card">
-    <img src="icon/Icon-2.png" alt="Icon" class="icon">
-    <h3>National <br>Association</h3>
-   <p>Our membership management <br> software provides full automations of <br> membership
-    renewals and payments</p>
-</div>
-<div class="card">
-    <img src="icon/Icon-3.png" alt="Icon" class="icon">
-    <h3>Clubs And <br>Group</h3>
-    <p>Our membership management <br> software provides full automations of <br> membership
-    renewals and payments</p>
-</div>
-</section>
-<section class="tron-kedua">
-<div class="tron-2">
-    <img src="icon/orang-lgberdua.png">
-</div>
-<div class="tron-content2">
-    <h1>The unseen of spending three <br> at Pixelgrade</h1>
-    <p>
+      <button class="btn-register">Register</button>
+
+    </div>
+    <div class="tron-image">
+      <img src="icon/Illustration.png" alt="Illustration">
+    </div>
+  </section>
+  <div class="dots-container">
+    <span class="dot active"></span>
+    <span class="dot"></span>
+    <span class="dot"></span>
+  </div>
+  <!--base -->
+  <section class="client">
+    <div class="home-base">
+      <h1>Our Client</h1>
+      <p>We have been working with some Fortune 500+ client</p>
+    </div>
+    <!-- logo -->
+    <div class="line-logo">
+      <img src="logo/Logo-(1).png">
+      <img src="logo/Logo-(2).png">
+      <img src="logo/Logo-(3).png">
+      <img src="logo/Logo-(4).png">
+      <img src="logo/Logo-(5).png">
+      <img src="logo/Logo-(6).png">
+      <img src="logo/Logo-(7).png">
+    </div>
+    <!-- card -->
+    <div class="community">
+      <h1>Manage your entire community <br>
+        <span>in a single system</span>
+      </h1>
+      <p>Who is Nexcent suitable for?</p>
+    </div>
+    <div class="card-container">
+      <div class="card">
+        <img src="icon/Icon-1.png" alt="Icon" class="icon">
+        <h3>Membership <br> Organisation</h3>
+        <p>Our membership management <br> software provides full automations of <br> membership
+          renewals and payments</p>
+      </div>
+      <div class="card">
+        <img src="icon/Icon-2.png" alt="Icon" class="icon">
+        <h3>National <br>Association</h3>
+        <p>Our membership management <br> software provides full automations of <br> membership
+          renewals and payments</p>
+      </div>
+      <div class="card">
+        <img src="icon/Icon-3.png" alt="Icon" class="icon">
+        <h3>Clubs And <br>Group</h3>
+        <p>Our membership management <br> software provides full automations of <br> membership
+          renewals and payments</p>
+      </div>
+  </section>
+  <section class="tron-kedua">
+    <div class="tron-2">
+      <img src="icon/orang-lgberdua.png">
+    </div>
+    <div class="tron-content2">
+      <h1>The unseen of spending three <br> at Pixelgrade</h1>
+      <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-         Excepturi dolorem reiciendis assumenda quo soluta nisi hic<br> 
-         ipsam quisquam minima placeat expedita quod accusantium iusto<br>
-          explicabo architecto sit error, eos rerum.
-    </p>
+        Excepturi dolorem reiciendis assumenda quo soluta nisi hic<br>
+        ipsam quisquam minima placeat expedita quod accusantium iusto<br>
+        explicabo architecto sit error, eos rerum.
+      </p>
       <button class="btn-register2">Learn More</button>
     </div>
-    </section>
+  </section>
 
-    <section class="container">
-        <div class="left-text">
+  <section class="container">
+    <div class="left-text">
       <h2>Helping a local <br>
         <span>business reinvent itself</span>
       </h2>
       <p>We reached here with our hard work and dedication</p>
     </div>
-        <div class="stats">
+    <div class="stats">
       <div class="stat-item">
-       <img src="icon/Icon-4.png">
+        <img src="icon/Icon-4.png">
         <div class="stat-text">
           <span class="stat-number">2,245,341</span>
           <span class="stat-label">Members</span>
@@ -150,7 +153,7 @@
       </div>
 
       <div class="stat-item">
-       <img src="icon/Icon-7.png">
+        <img src="icon/Icon-7.png">
         <div class="stat-text">
           <span class="stat-number">1,926,436</span>
           <span class="stat-label">Payments</span>
@@ -159,91 +162,91 @@
     </div>
   </section>
   <section class="tron-ketiga">
-      <div class="tron-3">
-        <img src="icon/orang-mencethp.png">
-      </div>
-      <div class="tron-content3">
-        <h1>How to design your site footer like <br> we did</h1>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
-         Et aut debitis eius ipsum commodi pariatur tenetur iste excepturi <br>
-         labore nam architecto facere sequi dignissimos eveniet<br>
-          saepe, voluptas eum minima in. Lorem ipsum dolor sit amet<br>
-           consectetur adipisicing elit. Officiis repellendus, quam doloribus,<br>
-            placeat vero, ratione praesentium dignissimos officia velit quasi.</p>
-            <button class="btn-register3">Learn More</button>
-      </div>
+    <div class="tron-3">
+      <img src="icon/orang-mencethp.png">
+    </div>
+    <div class="tron-content3">
+      <h1>How to design your site footer like <br> we did</h1>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.<br>
+        Et aut debitis eius ipsum commodi pariatur tenetur iste excepturi <br>
+        labore nam architecto facere sequi dignissimos eveniet<br>
+        saepe, voluptas eum minima in. Lorem ipsum dolor sit amet<br>
+        consectetur adipisicing elit. Officiis repellendus, quam doloribus,<br>
+        placeat vero, ratione praesentium dignissimos officia velit quasi.</p>
+      <button class="btn-register3">Learn More</button>
+    </div>
   </section>
   <section class="tron-keempat">
-  <div class="tron-4">
-    <img src="icon/image-9.png">
-  </div>
-  <div class="tron-content4">
-  <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus<br>
-   tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida<br>
-   enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie<br>
-   mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse<br>
-   eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien,<br>
-   vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum<br>
-   id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
-   <div class="isiteks">
-   <span class="text1">The Smith</span>
-   <span class="text2">British Dragon Boat Racing Association</span>
-   <div class="customers">
-   <div class="line-logo2">
-    <img src="logo/Logo (8).png">
-    <img src="logo/Logo (9).png">
-    <img src="logo/Logo (10).png">
-    <img src="logo/Logo (11).png">
-    <img src="logo/Logo (12).png">
-    <img src="logo/Logo (13).png">
-   </div>
-   <a href="#" class="meet-customers">
-    Meet all customers →
-  </a>
-  </div>
-</section>
-<div class="marketing">
-   <h1>Caring is the new marketing</h1>
-   <p>The Nexcent blog is the best place to read about the latest membership insights,<br>
-    trends and more. See who's joining the community, read about how our community<br>
-    are increasing their membership income and lot's more.​</p>
-</div> 
-<section class="cards">
-  <div class="card2">
-    <img src="image/image-18.png">
-    <div class="card-box2">
-      <h3>Creating Streamlined Safeguarding Processes with OneRen</h3>
-      <a href="#" class="readmore">Readmore →</a>
+    <div class="tron-4">
+      <img src="icon/image-9.png">
     </div>
-  </div>
-
-  <div class="card2">
-    <img src="image/image-19.png">
-    <div class="card-box2">
-      <h3>What are your safeguarding responsibilities and how can you manage them?</h3>
-      <a href="#" class="readmore">Readmore →</a>
-    </div>
-  </div>
-
-  <div class="card2">
-    <img src="image/image-20.png">
-    <div class="card-box2">
-      <h3>Revamping the Membership Model with Triathlon<br> Australia</h3>
-      <a href="#" class="readmore">Readmore →</a>
-    </div>
-  </div>
+    <div class="tron-content4">
+      <p>Maecenas dignissim justo eget nulla rutrum molestie. Maecenas lobortis sem dui, vel rutrum risus<br>
+        tincidunt ullamcorper. Proin eu enim metus. Vivamus sed libero ornare, tristique quam in, gravida<br>
+        enim. Nullam ut molestie arcu, at hendrerit elit. Morbi laoreet elit at ligula molestie, nec molestie<br>
+        mi blandit. Suspendisse cursus tellus sed augue ultrices, quis tristique nulla sodales. Suspendisse<br>
+        eget lorem eu turpis vestibulum pretium. Suspendisse potenti. Quisque malesuada enim sapien,<br>
+        vitae placerat ante feugiat eget. Quisque vulputate odio neque, eget efficitur libero condimentum<br>
+        id. Curabitur id nibh id sem dignissim finibus ac sit amet magna.</p>
+      <div class="isiteks">
+        <span class="text1">The Smith</span>
+        <span class="text2">British Dragon Boat Racing Association</span>
+        <div class="customers">
+          <div class="line-logo2">
+            <img src="logo/Logo-(8).png">
+            <img src="logo/Logo-(9).png">
+            <img src="logo/Logo-(9).png">
+            <img src="logo/Logo-(11).png">
+            <img src="logo/Logo-(12).png">
+            <img src="logo/Logo-(13).png">
+          </div>
+          <a href="#" class="meet-customers">
+            Meet all customers →
+          </a>
+        </div>
   </section>
-<section>
-<div class="demo">
-  <h1>Pellentesque suscipit<br> fringilla libero eu.</h1>
-  <button class="btn-demo">Get a Demo →</button>
-</section>
+  <div class="marketing">
+    <h1>Caring is the new marketing</h1>
+    <p>The Nexcent blog is the best place to read about the latest membership insights,<br>
+      trends and more. See who's joining the community, read about how our community<br>
+      are increasing their membership income and lot's more.​</p>
+  </div>
+  <section class="cards">
+    <div class="card2">
+      <img src="image/image-18.png">
+      <div class="card-box2">
+        <h3>Creating Streamlined Safeguarding Processes with OneRen</h3>
+        <a href="#" class="readmore">Readmore →</a>
+      </div>
+    </div>
 
-<footer>
+    <div class="card2">
+      <img src="image/image-19.png">
+      <div class="card-box2">
+        <h3>What are your safeguarding responsibilities and how can you manage them?</h3>
+        <a href="#" class="readmore">Readmore →</a>
+      </div>
+    </div>
+
+    <div class="card2">
+      <img src="image/image-20.png">
+      <div class="card-box2">
+        <h3>Revamping the Membership Model with Triathlon<br> Australia</h3>
+        <a href="#" class="readmore">Readmore →</a>
+      </div>
+    </div>
+  </section>
+  <section>
+    <div class="demo">
+      <h1>Pellentesque suscipit<br> fringilla libero eu.</h1>
+      <button class="btn-demo">Get a Demo →</button>
+  </section>
+
+  <footer>
     <div class="footer-left">
       <h2><img src="logo/Icon.png"> Nexcent</h2>
       <p>Copyright © 2020 Nexcent ltd.<br>
-      All rights reserved</p>
+        All rights reserved</p>
       <div class="socials">
         <a href="#"><i class="fab fa-instagram"></i></a>
         <a href="#"><i class="fab fa-dribbble"></i></a>
@@ -274,7 +277,7 @@
         </ul>
       </div>
     </div>
-    
+
     <div class="footer-right">
       <h4>Stay up to date</h4>
       <div class="subscribe">
@@ -285,4 +288,5 @@
   </footer>
 
 </body>
+
 </html>
